Fixed dumb spacing

--- a/home/public/stylesheets/main.css
+++ b/home/public/stylesheets/main.css
@@ -24,7 +24,6 @@ header .logo-group {
     font-size: 32px;
     display: flex;
     align-items: center;
-    gap: 5px;   /* perfect spacing */
 }
 header .logo {
     color: #ecf0f1;
